Finishing basic module for store, including documentation and tests
